# MCHPRS

./: .gitignore  Cargo.toml  Config.toml  README.md  commands.txt  draw.sh  graph0.dot  graphgc.dot  ok.aig  ok.dot  optimize.sh
.github/workflows/: build.yml
FPGA/src/: top.sv
crates/aigrs/: Cargo.toml
crates/aigrs/src/: aigok.rs  lib.rs
crates/aigrs/src/components/: mod.rs
crates/aigrs/src/networks/: aiger.rs  and.rs  andtree.rs  mod.rs  testnetwork.rs
crates/aigrs/src/networks/petaig/: mod.rs
crates/backend/: Cargo.toml
crates/backend/src/direct/: compile.rs  mod.rs
crates/backend/src/fpga/: compiler.rs
crates/core/: Cargo.toml
crates/core/benches/: chungus_full.rs
crates/core/src/: items.rs  player.rs  server.rs
crates/core/src/plot/: mod.rs  scoreboard.rs
crates/core/src/plot/worldedit/: execute.rs  mod.rs
crates/core/src/redpiler/: compile_graph.rs  mod.rs
crates/core/src/redpiler/backend/: direct.rs  mod.rs  threading.rs
crates/core/src/redstone/: comparator.rs  mod.rs
crates/core/src/world/: storage.rs
crates/redpiler/: Cargo.toml  graph0.dot  graphgc.dot  ok.aig
crates/redpiler/src/: compile_graph.rs  lib.rs  possible_signal_strength.rs  redpiler_graph.rs
crates/redpiler/src/backend/: mod.rs
crates/redpiler/src/passes/: aig.rs  cancelling_comparator_edges.rs  coalesce2.rs  constant_coalesce.rs  constant_fold2.rs  identify_nodes.rs  input_search.rs  mod.rs  narrow_outputs.rs  unreachable_output2.rs
crates/redpiler_graph/src/: lib.rs
crates/save_data/src/: plot_data.rs
tests/common/: mod.rs
(+24 files in other folders)
