[package]
name = "mchprs_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
enum_dispatch = { workspace = true }
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
mchprs_redstone = { path = "../redstone" }
mchprs_redpiler = { path = "../redpiler" }
serialport = "4.6.1"